Fixed overflow of project content and padding issues

--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -1113,6 +1113,9 @@ footer p {
         .project-cont, .project .image {
             width: 100%;
         }
+        .project p, .project a {
+            font-size: smaller;
+        }
         .project .image {
             height: 55%;
         }
